Refactoring ID's types
