# internal/models/cat.go
@@ -2,24 +2,22 @@ package models
 
 import "time"
 
-type CatChipNumber struct {
-	ChipNumber string `json:"chipNumber"`
-}
+type CatChipNumber string
 
 type Cat struct {
-	CatChipNumber
-	Nickname                 string    `json:"nickname"`
-	PhotoUrl                 string    `json:"photoUrl"`
-	Gender                   string    `json:"gender"`
-	Age                      int       `json:"age"`
-	DateOfAdmissionToShelter time.Time `json:"dateOfAdmissionToShelter"`
+	CatChipNumber            CatChipNumber `json:"chipNumber"`
+	Nickname                 string        `json:"nickname"`
+	PhotoUrl                 string        `json:"photoUrl"`
+	Gender                   string        `json:"gender"`
+	Age                      int           `json:"age"`
+	DateOfAdmissionToShelter time.Time     `json:"dateOfAdmissionToShelter"`
 }
 
 type CreateCatRequest struct {
-	CatChipNumber
-	Nickname                 string    `json:"nickname" binding:"required"`
-	PhotoUrl                 string    `json:"photoUrl"`
-	Gender                   string    `json:"gender"`
-	Age                      int       `json:"age"`
-	DateOfAdmissionToShelter time.Time `json:"dateOfAdmissionToShelter"`
+	CatChipNumber            CatChipNumber `json:"chipNumber"`
+	Nickname                 string        `json:"nickname" binding:"required"`
+	PhotoUrl                 string        `json:"photoUrl"`
+	Gender                   string        `json:"gender"`
+	Age                      int           `json:"age"`
+	DateOfAdmissionToShelter time.Time     `json:"dateOfAdmissionToShelter"`
 }
